[package]
name = "ez_log"
version = "0.1.0"
edition = "2021"
description = "Simple logging library for Rust"
license = "MIT"

[dependencies]
colorized = { version = "1.0.0", optional = true }
chrono = { version = "0.4.9", optional = true }

[features]
default = ["color", "time"]
color = ["dep:colorized"]
time = ["dep:chrono"]
dump = ["time"]
