[package]
name = "ez_log"
version = "0.1.1"
edition = "2021"
description = "Simple logging library for Rust"
license = "MIT"
repostitory = "https://github.com/JajaNooba/ez-log"
documentation = "https://docs.rs/ez_log/latest/ez_log/"

[dependencies]
colorized = { version = "1.0.0", optional = true }
chrono = { version = "0.4.9", optional = true }

[features]
default = ["color", "time"]
color = ["dep:colorized"]
time = ["dep:chrono"]
dump = ["time"]
