[package]
name = "ez_log"
version = "0.1.2"
edition = "2021"
authors = ["JajaNooba"]
description = "Simple logging library for Rust"
license = "MIT"
repository = "https://github.com/JajaNooba/ez-log"
documentation = "https://docs.rs/ez_log/latest/ez_log/"

[dependencies]
colorized = { version = "1.0.0", optional = true }
chrono = { version = "0.4.9", optional = true }

[features]
default = ["color", "time", "dump"]
color = ["dep:colorized"]
time = ["dep:chrono"]
dump = ["time"]
